project2/tests/reject/0-ternaryOperator-bad.cc
int main(){
    int a = true ? 3 : 4;
    int b = true ? false : 4;
    int c = true ? 3 : 4.4;
    int d = true ? 3.2 : 4.1;
    double e = true ? false ? 3.2 : 4.1 : 4.3;
}